api/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-gateway-ingress
  namespace: library
spec:
  rules:
  - host: gateway.library.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: library-gateway
            port: 
              number: 80
